Refactor AccountController to use authenticated user principal for account creation and listing.